Fixes in tests (one still not working), added missing JavaDoc